--- a/overview/architecture-core-concepts/system-architecture.mdx
+++ b/overview/architecture-core-concepts/system-architecture.mdx
@@ -1,150 +1,185 @@
 ---
-title: "System Architecture Overview"
-description: "See how the app is structured from front-end to data aggregation using a simple architecture diagram. This includes entrypoints, core React components, data aggregation logic, and filtering flows. Understand key communication patterns and where major responsibilities live."
+title: "How the App is Structured"
+description: "An illustrated overview of the system’s major components, from data aggregation and filtering to UI rendering. Includes a Mermaid diagram for a high-level visual, and a brief walkthrough of how data flows from sources to the user-facing interface."
 ---
 
-# System Architecture Overview
+# How the App is Structured
 
-## Understanding the Structure of Y Combinator Graveyard Stories
+Discover the design and flow of Y Combinator Graveyard Stories. This page provides a clear, illustrated overview of the application’s major components—from data aggregation and filtering to the final user interface—demonstrating how information travels from external sources all the way to your screen.
 
-Explore how this interactive web app is architected, from the user’s first interaction at the front-end through the layers of core React components to the data aggregation and filtering flows powering an insightful experience. This overview provides clarity on the app’s key communication patterns and where major responsibilities reside.
+## Overview
 
----
+At its core, the app delivers an intuitive experience for exploring a rich dataset of failed YC startups. Behind the scenes, the system orchestrates several key parts working in harmony:
 
-## Why This Matters
+- Data ingestion and aggregation
+- User-driven filtering and searching
+- Dynamic UI rendering
 
-For users exploring failed YC startups, understanding the architecture clarifies how data flows, how UI updates occur dynamically, and how filtering and searching offer responsive results. For developers and curious users alike, this insight helps in grasping how the app efficiently aggregates data while keeping the interface fast and intuitive.
+This structure ensures users find exactly the information they need quickly and seamlessly.
 
----
+## Data Flow Walkthrough
 
-## High-Level Architecture
+1. **Raw Data Sources**
+   - The app relies on a curated dataset of YC companies—including details like name, funding, failure reasons, and timelines.
 
-At the highest level, the app consists of the following distinct layers:
+2. **Data Access and State Management**
+   - Data is loaded into the app’s state using the custom `useCompanyData` hook, which processes the full list of companies, extracting metadata such as all available categories and batches.
 
-- **Entrypoints:** The initial HTML page loads the React application where the routing and global providers initialize.
-- **Core React Components:** These include essential UI building blocks like navigation, filtering controls, and the main content display components.
-- **Data Aggregation Logic:** Centralized hooks and functions manage data fetching, filtering, and computation of statistics.
-- **Filtering Flows:** User-driven filtering triggers updates that cascade through components, dynamically reshaping displayed results.
+3. **Filtering and Searching**
+   - Users refine the dataset through interactive controls:
+     - Search box to query names, descriptions, and failure reasons
+     - Category dropdown to focus on specific industries
+     - Batch dropdown to limit by founding cohorts
+   - These inputs drive a filtering function that returns a relevant subset dynamically.
 
-This flow ensures a seamless transition from data to display, providing users with an engaging, real-time exploration capability.
+4. **UI Components**
+   - Filter inputs are rendered in the `FiltersSection`, where users adjust their criteria.
+   - The resulting filtered companies are passed to `CompanyGrid`, which displays a responsive grid of `CompanyCard` components.
+   - Each card presents detailed company info, funding lost, lifespan, and reasons for failure.
 
----
+5. **Routing and Context**
+   - The app uses `react-router-dom` for navigating routes like the home page and a fallback NotFound page.
+   - React Query manages server state and caching, though data is currently static.
 
-## Key Components and Communication Patterns
 
-### Entrypoints
-- The React app bootstraps in `src/main.tsx`, mounting the root React component.
-- The root component `App` in `src/App.tsx` sets up routing, global providers such as tooltips and query clients, and hosts the main routes including the home page.
-
-### Core UI Components
-- **NavigationMenu:** Offers site-wide navigation with dropdowns and responsive interactions.
-- **Sidebar and FiltersSection:** A collapsible sidebar and filter controls enable precise company filtering by category, batch, and search terms.
-- **CompanyGrid:** Displays filtered company cards, reflecting the latest user selections instantly.
-
-### Data Management
-- **useCompanyData Hook:** This is the heart of data aggregation and filtering. It loads the base dataset (`allDeadCompanies`) and computes derived data points like categories, batches, total funding, and average lifespan.
-- It exposes `filterCompanies`, a performant function that dynamically refines the displayed list based on multiple filter criteria.
-
-### User-Driven Filtering Flow
-
-Every change in the filters (search term, category, batch) flows like this:
-
-1. User interacts with filter controls in the sidebar.
-2. State updates in `Index.tsx` for each filter.
-3. Filter states trigger `filterCompanies` via React’s `useMemo` to minimize computations.
-4. Filtered results update the `CompanyGrid` display.
-
-This reactive flow ensures immediate feedback with minimal delay.
-
----
-
-## Architecture Diagram
+## Visual Diagram of App Structure
 
 ```mermaid
 flowchart TD
-
-  subgraph Entrypoint
-    MainTSX["src/main.tsx: React App Mount"]
-    AppTSX["src/App.tsx: Root App Component"]
-  end
-
-  subgraph Routing & Providers
-    AppTSX --> TooltipProvider["TooltipProvider"]
-    AppTSX --> QueryClientProvider["React Query Client"]
-    QueryClientProvider --> Routes["React Router: Route Definitions"]
-    Routes --> IndexPage["Index.tsx: Homepage"]
-  end
-
-  subgraph UserInterface
-    IndexPage --> HeroSection
-    IndexPage --> FiltersSection
-    IndexPage --> CompanyGrid
-    IndexPage --> Footer
-  end
-
-  subgraph DataLayer
-    DataSet["allDeadCompanies Dataset"]
+  subgraph Data Layer
+    RawData["Raw YC Companies Dataset"]
     useCompanyData["useCompanyData Hook"]
   end
 
-  subgraph FilteringFlow
-    FiltersSection -->|Updates filter state| IndexPage
-    IndexPage -->|Calls| useCompanyData
-    useCompanyData --> DataSet
-    useCompanyData --> FilterCompanies["filterCompanies() Function"]
-    FilterCompanies -->|Filtered list| CompanyGrid
+  subgraph UI Layer
+    FiltersSection["FiltersSection Component"]
+    CompanyGrid["CompanyGrid Component"]
+    CompanyCard["CompanyCard Component"]
+    HeroSection["HeroSection Component"]
+    Footer["Footer Component"]
   end
 
-  %% Relationships
-  MainTSX --> AppTSX
+  subgraph App Routing
+    Router["BrowserRouter"]
+    Routes["Routes Configuration"]
+    IndexPage["Index Page"]
+    NotFoundPage["NotFound Page"]
+  end
 
-  classDef rectangular fill:#cce5ff,stroke:#3399ff,stroke-width:2px
-  class Entrypoint,Routing & Providers,UserInterface,DataLayer,FilteringFlow rectangular
+  RawData --> useCompanyData
+  useCompanyData --> FiltersSection
+  useCompanyData --> HeroSection
+  FiltersSection -->|User Input| useCompanyData
+  useCompanyData --> CompanyGrid
+  CompanyGrid --> CompanyCard
+
+  Router --> Routes
+  Routes --> IndexPage
+  Routes --> NotFoundPage
+  IndexPage --> FiltersSection
+  IndexPage --> CompanyGrid
+  IndexPage --> HeroSection
+  IndexPage --> Footer
+
+  classDef data fill:#f9f,stroke:#333,stroke-width:1px;
+  classDef ui fill:#bbf,stroke:#333,stroke-width:1px;
+  classDef routing fill:#bfb,stroke:#333,stroke-width:1px;
+
+  class RawData,useCompanyData data
+  class FiltersSection,CompanyGrid,CompanyCard,HeroSection,Footer ui
+  class Router,Routes,IndexPage,NotFoundPage routing
 ```
 
----
 
-## Practical Example: Filtering a Batch
+## Detailed Component Roles
 
-Imagine a user seeks startups from the Winter 2018 batch:
+### Data and Logic
 
-- They select the "Winter 2018" batch filter.
-- This triggers a state update in `Index.tsx`, which calls `filterCompanies`.
-- `filterCompanies` scans the dataset to return companies matching the batch.
-- `CompanyGrid` instantly refreshes to show only Winter 2018 startups.
+- **`useCompanyData` Hook**
+  - Acts as the central processing unit for the dataset.
+  - Extracts all unique `categories` and `batches` for filter options.
+  - Provides a `filterCompanies` function that applies search and filter criteria.
+  - Calculates summary stats like total funding lost and average company lifespan.
 
-This flow makes exploration immediate and intuitive.
+### UI Components
 
----
+- **`FiltersSection`**
+  - Hosts the search input and dropdown selectors.
+  - Reflects real-time counts of filtered companies versus total companies.
+  - Offers a clean, accessible way to narrow down results.
 
-## Best Practices and Tips
+- **`CompanyGrid` and `CompanyCard`**
+  - `CompanyGrid` manages layout, showing company cards in a responsive grid.
+  - `CompanyCard` displays detailed company attributes, such as:
+    - Name, description, category
+    - Funding raised and failure year range
+    - Failure reasons with visual cues
 
-- **Responsive Filtering:** Use the sidebar filters to quickly narrow down companies. The architecture guarantees quick updates with minimal lag.
-- **Use the Search:** Combined filtering by category and text search leverages the central filtering logic for best results.
-- **Understand Component Roles:** Navigating through components like `FiltersSection` and `CompanyGrid` helps grasp how UI and data interplay.
+- **`HeroSection`**
+  - Summarizes key figures prominently at page top.
+  - Highlights total companies, funding lost, and average active years.
 
----
+- **`Footer`**
+  - Provides consistent site-wide footer content.
+
+### Routing and Context
+
+- The app wraps everything inside `QueryClientProvider` and `TooltipProvider` ensuring query caching and UI tooltips operate globally.
+- Routing uses `react-router-dom` with a default route to the home page index and a catch-all for unknown URLs.
+
+
+## User Journey Example
+
+Imagine you want to explore failed companies from a specific Y Combinator batch:
+
+1. You open the app (Index page).
+2. The HeroSection immediately gives you a big-picture snapshot.
+3. You enter a keyword or select a batch from the dropdown in FiltersSection.
+4. The CompanyGrid updates instantly, showing matching companies.
+5. You click on any company card to read about its lifecycle and failure reason.
+
+This fluid flow is made possible by the app’s structured coordination between data hooks, filtering components, and UI rendering.
+
+
+## Tips and Best Practices
+
+- Use the search box to find specific terms in company names, reason descriptions, or categories.
+- Combine filters to drill down exactly to the subset of data you want to analyze.
+- Pay attention to the summary stats in the HeroSection for quick insights.
+- If no companies are found, adjust filters to broaden your search criteria.
+
 
 ## Troubleshooting Common Issues
 
-- **Delayed Filtering Results:** Verify that React states for filters update properly and that `useMemo` dependencies include all relevant inputs.
-- **Empty Results Unexpectedly:** Ensure filter criteria do not combine overly restrictive conditions; apply one filter at a time to debug.
-- **UI Not Rendering:** Check if `Index.tsx` properly imports and renders components, and that routing is correctly configured in `App.tsx`.
+- **No companies showing after filtering:** Check if the selected category or batch matches existing data; reset filters if needed.
+- **Slow filtering:** Since data is processed locally, ensure a modern browser and avoid excessive simultaneous filters.
+- **Navigation errors:** If you reach an unknown URL, the NotFound page guides you back to a valid route.
+
+
+## Getting Started
+
+Begin your exploration by visiting the [Home page](/) where the core components come together.
+Adjust filters in the `FiltersSection` and watch the live updates in the company grid.
+
+For a deeper dive into the product’s value, see the [Product Value & Typical Use Cases](/overview/getting-started-product/value-proposition-use-cases) page.
+
 
 ---
 
-## Next Steps
-
-- Dive into the [Core Concepts & Terminology](/overview/architecture-core-concepts/core-concepts-terminology) page to understand foundational terms.
-- Explore [Browsing YC Graveyard Stories](/guides/core-workflows/browse-companies) for usage workflows reflecting this architecture.
-- Learn about [Filtering and Searching for Companies](/guides/core-workflows/filter-search) to master user interaction with the filtering flows.
+Explore how this structure empowers a smooth user experience that connects rich data with intuitive controls. Understanding this architecture equips you to navigate and leverage the Y Combinator Graveyard Stories application effectively.
 
 ---
 
-This systematic architecture balances maintainability and user experience, enabling you to explore YC startup failure data efficiently and responsively.
+## Further Reading
+
+- [What is Y Combinator Graveyard Stories?](/overview/getting-started-product/about-product)
+- [Product Value & Typical Use Cases](/overview/getting-started-product/value-proposition-use-cases)
+- [Who Should Use This Product?](/overview/getting-started-product/target-audience)
+
+- React Router: https://reactrouter.com/
+- React Query (used for data caching): https://tanstack.com/query/latest
+
 
 ---
 
-<Info>
-This documentation is based on the latest main branch source code and reflects the current design choices and component responsibilities.
-</Info>
+*This page focuses exclusively on the app’s internal structure and flow, complementing broader product context available in other documentation.*
